--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
+  flex-grow: 1;
   text-align: center;
+  background-color: #282c34;
+  color: white;
 }
 
 .App-header {
@@ -15,4 +18,8 @@
 
 .Location {
   display: inline-flex;
+}
+
+.leaflet-container {
+  height: 270px;
 }
